2025-07-13T01:04:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16243787664 # 703
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-13
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 566 959 / 579 972
* notice: next accum: outdated-unq outdated-all / unq all: 567 960 / 580 973
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-29] / [2025-07-12]

2025-07-12T01:00:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16232512869 # 702
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-12
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 565 958 / 578 971
* notice: next accum: outdated-unq outdated-all / unq all: 566 959 / 579 972
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-27] / [2025-07-11]

2025-07-11T00:58:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16209325025 # 701
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-11
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 564 957 / 576 969
* notice: next accum: outdated-unq outdated-all / unq all: 565 958 / 578 971
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-26] / [2025-07-10]

2025-07-10T00:58:30Z: