@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-13T01:04:46Z",
-  "count_outdated" : 960,
-  "uniques_outdated" : 567,
-  "count" : 973,
-  "uniques" : 580,
+  "timestamp" : "2025-07-14T01:02:01Z",
+  "count_outdated" : 961,
+  "uniques_outdated" : 568,
+  "count" : 975,
+  "uniques" : 582,
   "clones" : [
-    {
-      "timestamp": "2025-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-01T00:00:00Z",
       "count": 2,
@@ -94,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
