@@ -1,12 +1,7 @@
 {
-  "count": 13,
+  "count": 14,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2025-06-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-01T00:00:00Z",
       "count": 2,
@@ -51,6 +46,11 @@
       "timestamp": "2025-07-12T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-13T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
