@@ -1,3 +1,12 @@
+2025-07-14T01:02:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16255512974 # 704
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-14
+* notice: last 14d: unq all: 6 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 567 960 / 580 973
+* notice: next accum: outdated-unq outdated-all / unq all: 568 961 / 582 975
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-06-30] / [2025-07-13]
+
 2025-07-13T01:04:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16243787664 # 703
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-13
